--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "name": "finance-tracker",
   "private": true,
+  "version": "0.1.0",
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
+    "bootstrap": "4.6.2",
+    "core-js": "^3.38.1",
+    "jquery": "^3.7.1",
+    "popper.js": "1.16.1",
+    "regenerator-runtime": "^0.14.1",
     "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.12"
   },
-  "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3"
+    "@babel/core": "7.26.0",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-private-methods": "7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@babel/preset-env": "7.26.0",
+    "babel-loader": "8.2.5",
+    "webpack-dev-server": "3.11.3"
   }
 }
